--- a/Business Data/wwwroot/css/site.css
+++ b/Business Data/wwwroot/css/site.css
@@ -21,7 +21,7 @@ body {
 /* Encabezado */
 header {
     background-color: #2c3e50;
-    color: white;
+
     text-align: center;
     padding: 30px 0;
     font-family: 'Montserrat', sans-serif;
@@ -56,7 +56,9 @@ footer {
 
 /* Títulos */
 h1, h2, h3, h4, h5, h6 {
-    color: #1abc9c;
+   /* color: #1abc9c;*/
+    color: color: #1abc9c;
+    
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
 }
@@ -71,7 +73,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .chart-box {
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     background-color: #fff;
     padding: 20px;
@@ -99,7 +101,7 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 100%;
     padding: 20px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
@@ -130,9 +132,10 @@ h1, h2, h3, h4, h5, h6 {
     .form-grid button {
         padding: 12px 20px;
         background-color: #1abc9c;
+        
         color: white;
         border: none;
-        border-radius: 25px;
+        border-radius: 5px;
         cursor: pointer;
         width: 100%;
         margin-top: 10px;
@@ -141,7 +144,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
         .form-grid button:hover {
-            background-color: #16a085;
+            background-color:#23B55B;
         }
 
 /* Tabla de Resultados */
@@ -149,7 +152,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 30px;
     padding: 20px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
