--- a/Business Data/Pages/Shared/_Layout.cshtml
+++ b/Business Data/Pages/Shared/_Layout.cshtml
@@ -1,240 +1,46 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"] - Business Data</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>@ViewData["Title"] - Business Data</title>
 
-    <!-- Fuentes profesionales -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+        <!-- Fuentes profesionales -->
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
-    <style>
-        /* Variables de Colores y Transiciones */
-        :root {
-            --primary-color: #20A754;
-            --primary-light: #23B55B;
-            --secondary-color: #264653;
-            --accent-color: #E76F51;
-            --background-color: #F1F5F9;
-            --text-color: #333333;
-            --light-gray: #f9f9f9;
-            --white: #ffffff;
-            --shadow: rgba(0, 0, 0, 0.1);
-            --transition-speed: 0.3s;
-        }
+        <link rel="stylesheet" href="~/css/site.css" />
 
-        /* Fuente Global Profesional */
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background-color: var(--background-color);
-            margin: 60px;
-            margin-top:0px;
-            margin-bottom: 0px;
-            padding: 20px;
-            color: var(--text-color);
-            line-height: 1.6;
-        }
-
-        /* Foto Empresa */
-        .logo img {
-            height:80px;
-            width: auto;
-        }
-
-        /* Header actualizado */
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-            background-color: var(--white);
-            border-bottom: 1px solid var(--light-gray);
-            box-shadow: 0 2px 4px var(--shadow);
-            margin-bottom: 30px;
-            flex-wrap: wrap;
-            padding-top: 30px; /* Agregar más espacio en la parte superior */
-        }
-
-
-            header h1 {
-                
-                margin: 0;
-                font-size: 2rem;
-                text-transform:uppercase;
-                color: var(--primary-color);
-                flex: 1 1 100%;
-                text-align: center;
-                font-weight:800;
-                order: 2;
-            }
-
-        nav {
-            order: 3;
-            width: 100%;
-            margin-top: 10px;
-            text-align: center;
-        }
-
-            nav ul {
-                list-style: none;
-                padding: 0;
-                display: inline-flex;
-                gap: 20px;
-                margin: 0;
-            }
-
-                nav ul li a {
-                    text-decoration: none;
-                    color: var(--secondary-color);
-                    font-weight: 500;
-                    transition: color var(--transition-speed);
-                    text
-                }
-
-                    nav ul li a:hover {
-                        color: var(--primary-color);
-                    }
-
-        /* Footer Mejorado */
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            padding: 20px;
-            background-color: var(--white);
-            border-top: 1px solid var(--light-gray);
-            color: var(--text-color);
-            font-size: 0.9rem;
-            box-shadow: 0 -2px 4px var(--shadow);
-        }
-
-        /* Formulario */
-        form {
-            background-color: var(--white);
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px var(--shadow);
-            display: grid;
-            gap: 20px;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            transition: transform var(--transition-speed);
-        }
-
-            form:hover {
-                transform: scale(1.01);
-            }
-
-            form label {
-                font-weight: 500;
-                margin-bottom: 5px;
-                display: block;
-                color: var(--secondary-color);
-            }
-
-            form input[type="text"],
-            form input[type="number"],
-            form input[type="date"],
-            form select {
-                width: 100%;
-                padding: 12px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                transition: all var(--transition-speed);
-                font-size: 1rem;
-            }
-
-                form input:focus,
-                form select:focus {
-                    border-color: var(--primary-color);
-                    outline: none;
-                    box-shadow: 0 0 5px var(--primary-color);
-                }
-
-            form button {
-                grid-column: span 1;
-                padding: 14px;
-                background-color: var(--primary-color);
-                color: var(--white);
-                border: none;
-                border-radius: 5px;
-                cursor: pointer;
-                font-size: 1rem;
-                transition: background-color var(--transition-speed), transform var(--transition-speed);
-            }
-
-                form button:hover {
-                    background-color: var(--primary-light);
-                    transform: translateY(-2px);
-                }
-
-        /* Tabla de Resultados */
-        .table-container {
-            max-width: 100%;
-            overflow-x: auto;
-            margin-top: 30px;
-            box-shadow: 0 4px 6px var(--shadow);
-            border-radius: 10px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: var(--white);
-            min-width: 800px;
-        }
-
-        th, td {
-            padding: 15px 20px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            font-size: 0.95rem;
-        }
-
-        th {
-            background: linear-gradient(135deg, var(--primary-color), var(--primary-light));
-            color: var(--white);
-            position: sticky;
-            top: 0;
-            z-index: 1;
-        }
-
-        tr:nth-child(even) {
-            background-color: var(--light-gray);
-        }
-
-        tr:hover {
-            background-color: #e0f7fa;
-            transition: background-color var(--transition-speed);
-        }
-
-  
-    </style>
-</head>
-<body>
-    <div class="logo">
-        <img src="/Logo.png" alt="Business Data Logo">
-    </div>
-    <header>
-        <h1>@ViewData["Title"]</h1>
+    </head>
+    <body>
+        <div class="logo">
+            <img src="/Logo.png" alt="Business Data Logo">
+        </div>
+        <header>
+            <h1>@ViewData["Title"]</h1>
        
-        <nav>
-            <ul>
-                <li><a href="/">Empresas</a></li>
-                <li><a href="/AboutUs">Sobre Nosotros</a></li>
-                <li><a>Noticias</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="/">Empresas</a></li>
+                    <li><a href="/AboutUs">Sobre Nosotros</a></li>
+                    <li><a href="/Noticias">Noticias</a></li>
+                    <li><a href="/Contacto">Contacto</a></li>
+                </ul>
+            </nav>
         
-    </header>
+        </header>
     
-    <main>
+        <main>
         
-        @RenderBody()
-    </main>
-    <footer>
-        <p>&copy; @DateTime.Now.Year Business Data. Todos los derechos reservados.</p>
-    </footer>
-</body>
+            @RenderBody()
+        </main>
+        <footer>
+            <p>&copy; @DateTime.Now.Year Business Data. Todos los derechos reservados.</p>
+        </footer>
+        
+        <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+    </body>
 </html>
