--- a/Business Data/Pages/Shared/_Layout.cshtml
+++ b/Business Data/Pages/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <nav>
                 <ul>
                     <li><a href="/">Empresas</a></li>
-                    <li><a href="/AboutUs">Sobre Nosotros</a></li>
                     <li><a href="/Noticias">Noticias</a></li>
+                    <li><a href="/AboutUs">Sobre Nosotros</a></li>
                     <li><a href="/Contacto">Contacto</a></li>
                 </ul>
             </nav>
@@ -42,5 +42,7 @@
         <script>
             AOS.init();
         </script>
+    @RenderSection("Scripts", required: false)
+
     </body>
 </html>
