--- a/Business Data/Pages/AboutUs.cshtml
+++ b/Business Data/Pages/AboutUs.cshtml
@@ -45,7 +45,7 @@
 
 <!-- VALORES -->
 <section class="about-values" data-aos="fade-up">
-    <h2>Lo que nos mueve</h2>
+    <h2 style="text-align:center">Lo que nos mueve</h2>
     <div class="about-cards reversed">
         <div class="about-card colored" data-aos="flip-left" data-aos-delay="100">
             <h3><i class="fas fa-eye"></i> Transparencia</h3>
