--- a/Business Data/wwwroot/css/site.css
+++ b/Business Data/wwwroot/css/site.css
@@ -13,19 +13,28 @@
 }
 
 
-html{
-    height:100%;
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px;
 }
 /* === FUENTE GLOBAL === */
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     font-family: 'Open Sans', sans-serif;
     background: var(--background-color);
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
     color: var(--text-color);
     line-height: 1.6;
-    height: 100%;
-   
+}
+
+
+main {
+    flex: 1;
 }
 
 /* === HEADER === */
@@ -883,3 +892,21 @@ tr:hover {
     font-style: italic;
     opacity: 0.85;
 }
+
+.download-buttons {
+    margin-top: 10px;
+}
+
+    .download-buttons button {
+        background-color: #3498db;
+        color: white;
+        border: none;
+        padding: 5px 10px;
+        margin-right: 5px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+        .download-buttons button:hover {
+            background-color: #2980b9;
+        }
